--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body {
 
 input[type="text"] {
 	display: inline-block;
-	/* width: 500px; */
 	height: 40px;
 	box-sizing: border-box;
 	outline: none;
@@ -41,4 +40,58 @@ input[type="text"] {
 	text-decoration: none;
 	font-family: Montserrat;
 	margin-top: 20px;
+}
+.modal-button:disabled {
+	background: #d8e1fd;
+	color: #446df6;
+	border-radius: 6px;
+	border: none;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 15px 30px;
+	text-decoration: none;
+	font-family: Montserrat;
+	margin-top: 20px;
+}
+
+.nav {
+	height: 50px;
+	width: 100%;
+	background-color: #446df6;
+	position: absolute;
+	margin-bottom: 10px;
+	color: #fff;
+	font-weight: bold;
+	font-size: 16px;
+}
+.footer {
+	height: 50px;
+	width: 100%;
+	background-color: #446df6;
+	position: absolute;
+	bottom: 0;
+	color: #fff;
+	font-weight: bold;
+	font-size: 16px;
+}
+p {
+	margin-left: 10px;
+}
+.contact {
+	float: right;
+	margin-right: 20px;
+}
+
+.add-event-button {
+	margin-top: 70px;
+	margin-left: 50px;
+	color: white;
+	background-color: #446df6;
+	border-radius: 6px;
+	border: none;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 10px 20px;
+	text-decoration: none;
+	font-family: Montserrat;
 }
