--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@ input[type="text"] {
 .add-event-title {
 	color: white;
 	text-align: center;
+	border-bottom: 1px solid #fff;
+	margin-bottom: 30px;
 }
 
 .event-fields {
@@ -40,6 +42,7 @@ input[type="text"] {
 	text-decoration: none;
 	font-family: Montserrat;
 	margin-top: 20px;
+	margin-right: 20px;
 }
 .modal-button:disabled {
 	background: #d8e1fd;
@@ -109,3 +112,14 @@ p {
 /* .event-date {
 	margin-bottom: 30px;
 } */
+
+.bottom-buttons {
+	display: flex;
+	position: absolute;
+	bottom: 20%;
+}
+
+.delete-button {
+	background: #bf3100;
+	color: #fff;
+}
